# content-notify

./: .gitignore  AGENTS.md  ARCHITECTURE_AUDIT_REPORT.md  README.md
.github/: copilot-instructions.md
core-service/: .dockerignore  Dockerfile  pom.xml
core-service/src/main/java/com/perepilka/coreservice/: CoreServiceApplication.java
core-service/src/main/java/com/perepilka/coreservice/client/: TelegramServiceClient.java
core-service/src/main/java/com/perepilka/coreservice/controller/: AuthController.java  NotificationController.java  SubscriptionController.java
core-service/src/main/java/com/perepilka/coreservice/domain/: Account.java  Connection.java  Platform.java  Provider.java  Subscription.java
core-service/src/main/java/com/perepilka/coreservice/dto/: AuthRequest.java  AuthResponse.java  ErrorResponse.java  NotificationRequest.java  SubscriptionRequest.java  SubscriptionResponse.java
core-service/src/main/java/com/perepilka/coreservice/mapper/: SubscriptionMapper.java
core-service/src/main/resources/: application.properties
core-service/src/main/resources/db/migration/: V1__init_schema.sql  V2__change_enums_to_varchar.sql
core-service/src/test/java/com/perepilka/coreservice/: CoreServiceApplicationTests.java
docs/: PRD-Phase1.md  TECH_STACK.md
infrastructure/: .env.example  .gitignore  docker-compose.yml
telegram-bot/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
telegram-bot/src/: config.py  main.py  routes.py
telegram-bot/src/handlers/: __init__.py  subscription.py
telegram-bot/src/services/: __init__.py  core_client.py
(+10 files in other folders)
