[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "Telegram Bot Adapter for StreamNexus"
authors = ["StreamNexus Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.0"
aiohttp = "^3.9"
pydantic-settings = "^2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
mypy = "^1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
